# FileExplorer-XServer

./: .gitignore  CMakeLists.txt  filex
src/: App.cpp  App.h  FilesystemOps.cpp  FilesystemOps.h  Structs.h  filesystem_ops.cpp  filesystem_ops.h  main.cpp  structs.h  test.c  tree.h  tree_util.h
